appId: com.saucelabs.mydemo.app.ios
---
- launchApp:
    clearState: true
- tapOn:
    point: 207, 298
- tapOn:
    point: 207, 852
- tapOn:
    point: 207, 100
- tapOn:
    point: 207, 188
- tapOn: "ADD TO CART"
- assertVisible: "ADDED TO CART"
- tapOn:
    point: 25, 60
