appId: com.saucelabs.mydemo.app.ios
---
- launchApp:
    clearState: true
- tapOn: "Login"
- tapOn: "ProceedToCheckout"
- tapOn: "Rebecca Winter"
- eraseText
- tapOn: "Mandorley 112"
- eraseText
- tapOn: "Truro"
- eraseText
- tapOn: "89750"
- eraseText
- tapOn: "United Kingdom"
- eraseText
- tapOn: "Maxim Winter"
- eraseText
- tapOn: "3258 1265 7568 7896"
- eraseText
- tapOn: "03/25"
- eraseText
- tapOn: "123"
- eraseText
- tapOn: "Review Order"
- assertVisible: "Checkout"
