appId: com.saucelabs.mydemo.app.ios
---
- launchApp:
    clearState: true
- tapOn: "bob@example.com"
- tapOn: "Login"
- tapOn: "Catalog-tab-item"
- tapOn: "ProductItem"
- tapOn: "AddToCart"
- tapOn: "Cart-tab-item"
- tapOn: "ProceedToCheckout"
- tapOn: "Rebecca Winter"
- eraseText
- inputText: "Updated User"
- tapOn: "Mandorley 112"
- eraseText
- inputText: "2 Updated Street"
- tapOn: "Truro"
- eraseText
- inputText: "Updated City"
- tapOn: "89750"
- eraseText
- inputText: "54321"
- tapOn: "United Kingdom"
- eraseText
- inputText: "Updated Country"
- tapOn: "Maxim Winter"
- eraseText
- inputText: "Updated User"
- tapOn: "3258 1265 7568 7896"
- eraseText
- inputText: "4111111111111111"
- tapOn: "03/25"
- eraseText
- inputText: "12/30"
- tapOn: "123"
- eraseText
- inputText: "123"
- tapOn: "Review Order"
- assertVisible: "Updated User"
- assertVisible: "2 Updated Street"
- tapOn: "Catalog-tab-item"
