appId: com.saucelabs.mydemo.app.ios
tags:
  - cart
  - checkout
  - edge
---
- runFlow:
    file: ../common/login.yaml
    env:
      EMAIL: ${EMAIL || "bob@example.com"}
      PASSWORD: ${PASSWORD || "10203040"}

- runFlow:
    file: ../common/addProduct.yaml
    env:
      PRODUCT_NAME: ${output.testData.products.backpackRed.name}
      PRODUCT_DETAIL: ${output.testData.products.backpackRed.detail}
      ADDITIONAL_QUANTITY: 0

- tapOn:
    id: ${output.navigation.catalogTab}

- runFlow:
    file: ../common/addProduct.yaml
    env:
      PRODUCT_NAME: ${output.testData.products.boltBlack.name}
      PRODUCT_DETAIL: ${output.testData.products.boltBlack.detail}
      ADDITIONAL_QUANTITY: 0

- tapOn:
    id: ${output.navigation.catalogTab}

- runFlow:
    file: ../common/addProduct.yaml
    env:
      PRODUCT_NAME: ${output.testData.products.backpackOrange.name}
      PRODUCT_DETAIL: ${output.testData.products.backpackOrange.detail}
      ADDITIONAL_QUANTITY: 2

- runFlow: ../common/goToCart.yaml
- assertVisible: "5 Items"

# Increase the orange backpack from 3 -> 6 using three additional taps.
- tapOn:
    text: ${output.catalog.addPlusIcon}
    repeat: 3
    delay: 150

- assertVisible: "$${output.testData.expected.updateQuantityTotal}"
- assertVisible: "8 Items"
