appId: com.saucelabs.mydemo.app.ios
tags:
  - login
  - negative
---
- runFlow: ../common/openLogin.yaml
- tapOn:
    id: ${output.login.username}
- inputText: ${EMAIL || "bob@example.com"}
- tapOn:
    id: ${output.login.password}
- inputText: ${INVALID_PASSWORD || "password"}
- tapOn:
    id: ${output.login.loginTitle}
- tapOn:
    id: ${output.login.loginButton}
- assertVisible: ${output.login.invalidPassword}
